Add title attribute to front matter

--- a/spec/_src/templates/_index.html.erb
+++ b/spec/_src/templates/_index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="project">
   <% projects.each do |project| %>
-    <h2><%= project.name %></h2>
-    <%= project.desc %>
+    <h2><%= project['title'] %></h2>
+    <%= project['desc'] %>
   <% end %>
 </div>
