--- a/spec/_src/templates/_project.html.erb
+++ b/spec/_src/templates/_project.html.erb
@@ -1,3 +1,7 @@
 <h1>Project: <%= title %></h1>
 
+<% images.each do |image| %>
+  <img src="<%= image['path'] %>" alt="<%= image['alt'] %>">
+<% end %>
+
 <%= desc %>
